//
// PROJECT:         Aspia
// FILE:            protocol/key_exchange.proto
// LICENSE:         GNU General Public License 3
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

message HelloMessage
{
    bytes public_key = 1;
    bytes nonce = 2;
}
